# exception-hang

./: Dockerfile  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
exception_hang/: app.py
