[tool.poetry]
name = "exception-hang"
version = "0.1.0"
description = ""
authors = ["Will Newton <will.newton@statsbomb.com>"]
readme = "README.md"
packages = [{include = "exception_hang"}]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^20.1.0"
falcon = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
